--- a/server/render.yaml
+++ b/server/render.yaml
@@ -2,8 +2,12 @@ services:
   - type: web
     name: missing-persons-backend
     runtime: go
-    buildCommand: go build -o server
+    buildCommand: |
+      go mod download
+      go build -o server .
     startCommand: ./server
     envVars:
       - key: GO_ENV
         value: production
+      - key: PORT
+        value: "8081"  
