Configured Amazon S3 without sensitive information

--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,8 @@ DB_PASSWORD=AVNS_Fmosg10in_BiK52-ZE8
 DB_DATABASE=defaultdb
 DB_PORT=15972
 
+# AWS Configuration
+AWS_ACCESS_KEY_ID=AKIAQKGGXGPW2CI3KW7C
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=eu-north-1  
+S3_BUCKET_NAME=missing-persons-images
